--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,9 @@
     <name>toDoList</name>
     <description>toDoList</description>
     <properties>
-        <java.version>17</java.version>
+        <java.version>15</java.version>
+        <maven.compiler.source>15</maven.compiler.source>
+        <maven.compiler.target>15</maven.compiler.target>
     </properties>
     <dependencies>
         <dependency>
